--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <section>
       <img src="stars.png" id="stars">
-      <img src="moone.png" id="moosn">
+      <img src="moon.png" id="moon">
       <img src="mountains_behind.png" id="mountains_behind">
       <h2 id="text">Feet Drip PT</h2>
       <a href="#sec" id="btn">Explore</a>
